endpoints using open api checkstyle fixes javadocs
