# scheme-service/src/main/java/uk/gov/justice/laa/fee/scheme/model/FeeCalculation.java
@@ -1,0 +1,18 @@
+package uk.gov.justice.laa.fee.scheme.model;
+
+import java.math.BigDecimal;
+import lombok.Builder;
+import lombok.Data;
+
+/**
+ * model for feeCalculation object.
+ */
+@Builder
+@Data
+public class FeeCalculation {
+
+  // determine what else to include here i.e. calculated fields etc
+
+  private BigDecimal subTotal;
+  private BigDecimal finalTotal;
+}
