# scheme-service/src/main/java/uk/gov/justice/laa/fee/scheme/model/FeeCalculationResponseDto.java
@@ -1,0 +1,15 @@
+package uk.gov.justice.laa.fee.scheme.model;
+
+import lombok.Builder;
+import lombok.Data;
+
+/**
+ * model for fee calculation response.
+ */
+@Builder
+@Data
+public class FeeCalculationResponseDto {
+
+  private String feeCode;
+  private FeeCalculation feeCalculation;
+}
